samples/_failures_safe/1761624406_378e31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93fa1606.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_93fa1606.c:147:13: error: expected declaration or statement at end of input
  147 |             }
      |             ^
./samples/SAFE/__tmp_93fa1606.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93fa1606.c:147:13: error: expected declaration or statement at end of input
